apps/overlays/huston/infra/kube-prometheus-stack/ingress.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: node-exporter-cert
  namespace: monitoring
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`metrics.huston.lab.markaplay.net`)
      kind: Rule
      services:
      - name: kube-prometheus-stack-prometheus
        port: 9090
  tls:
    secretName: node-exporter-cert
